# Mink

./: 0414_2.mov.lottie.json  README.md  arle.json  arle.mp4.lottie.json  meson.build  s
data/: com.github.zenitsudev.mink.gschema.xml  meson.build
src/: Application.vala  Main.vala  MainWindow.vala  meson.build
src/Widgets/: HeaderBar.vala  Options.vala
